--- a/Test.ATM/Test.ATM.csproj
+++ b/Test.ATM/Test.ATM.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="test.cs" />
     <Compile Include="TestATM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
