--- a/ATM/ATM.csproj
+++ b/ATM/ATM.csproj
@@ -46,7 +46,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Seperation.cs" />
+    <Compile Include="FlightCalculator.cs" />
+    <Compile Include="InputFormatter.cs" />
+    <Compile Include="InvalidInputException.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TransponderData.cs" />
