--- a/ATM/ATM.csproj
+++ b/ATM/ATM.csproj
@@ -46,6 +46,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FlightCollection.cs" />
     <Compile Include="Seperation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
