--- a/ATM/ATM.System.csproj
+++ b/ATM/ATM.System.csproj
@@ -64,6 +64,7 @@
     <Compile Include="IDataFormatter.cs" />
     <Compile Include="IFlightCalculator.cs" />
     <Compile Include="InvalidInputException.cs" />
+    <Compile Include="IRender.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TransponderData.cs" />
