--- a/ATM/ATM.System.csproj
+++ b/ATM/ATM.System.csproj
@@ -63,10 +63,12 @@
     <Compile Include="DataFormatter.cs" />
     <Compile Include="IDataFormatter.cs" />
     <Compile Include="IFlightCalculator.cs" />
+    <Compile Include="IFlightCollection.cs" />
     <Compile Include="InvalidInputException.cs" />
     <Compile Include="IRender.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Render.cs" />
     <Compile Include="TransponderData.cs" />
   </ItemGroup>
   <ItemGroup>
