--- a/ATM/ATM.System.csproj
+++ b/ATM/ATM.System.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Interfaces\ILog.cs" />
     <Compile Include="InvalidInputException.cs" />
     <Compile Include="Interfaces\IRender.cs" />
+    <Compile Include="Log.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Render.cs" />
