--- a/Test.ATM/Test.ATM.csproj
+++ b/Test.ATM/Test.ATM.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CollistionDetectorUnitTest.cs" />
     <Compile Include="test.cs" />
     <Compile Include="TestATM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
