--- a/ATM/ATM.System.csproj
+++ b/ATM/ATM.System.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Collision.cs" />
     <Compile Include="CollisionCollection.cs" />
     <Compile Include="CollisionDetector.cs" />
+    <Compile Include="Console.cs" />
     <Compile Include="Flight.cs" />
     <Compile Include="FlightCalculator.cs" />
     <Compile Include="FlightCollection.cs" />
@@ -66,6 +67,7 @@
     <Compile Include="FlightFilter.cs" />
     <Compile Include="Interfaces\ICollisionCollection.cs" />
     <Compile Include="Interfaces\ICollisionDetector.cs" />
+    <Compile Include="Interfaces\IConsole.cs" />
     <Compile Include="Interfaces\IDataFormatter.cs" />
     <Compile Include="Interfaces\IFlightCalculator.cs" />
     <Compile Include="Interfaces\IFlightFilter.cs" />
