--- a/ATM/ATM.System.csproj
+++ b/ATM/ATM.System.csproj
@@ -56,6 +56,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ATM.cs" />
     <Compile Include="Collision.cs" />
     <Compile Include="CollisionCollection.cs" />
     <Compile Include="CollisionDetector.cs" />
